avoid display issues if the breadcrumb is too long to fit one row

--- a/css/breadcrumbs.css
+++ b/css/breadcrumbs.css
@@ -2,6 +2,7 @@
     height: 3rem;
     line-height: 3rem;
     padding-left: 3rem;
+    flex-wrap: wrap;
 }
 #breadcrumbs span {
     display: inline-block;
